--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         
         <div class="header">
             <div class="avatar-wrap">
-                <img src="/asset/images/Eng/Mario.jpg" class="avatar" id="profileImage">
+                <img src="asset/images/Eng/Mario.jpg" class="avatar" id="profileImage">
             </div>
             <h1 class="name">Mario Atef</h1>
             <div class="role-badge">HR Professional</div>
@@ -286,7 +286,7 @@
             email: "mariomagic46@gmail.com",
             url: "https://agileprime-gc.com",
             address: ";;Bay View Tower 1708, Business Bay;Dubai;;;UAE",
-            photoUrl: "/asset/images/Eng/Mario.jpg" 
+            photoUrl: "asset/images/Eng/Mario.jpg" 
         };
 
         function showToast(msg) {
